# DSCE

./: .gitignore  CITATION.cff  Cargo.toml  NOTICE  README.md  pyproject.toml
docs/: CODE_WALKTHROUGH.md  DEPENDENCY_ROADMAP.md  DESIGN.md  FRD.md  MILESTONES.md  PRD.md  PROBLEM_STATEMENT.md  RISK_REGISTER.md  SRD.md
dsce/: __init__.py  __main__.py  db_store.py  demo_kb.py  engine.py  facts.py  proof.py  sand.py  vial.py
scripts/: build_dictionary_tsv.py  download_dictionary.py  seed_geonames.py  seed_taxonomy_grammar.py  update_dictionary.py
src/: compute.rs  db_store.rs  demo_kb.rs  engine.rs  facts.rs  gui_main.rs  harvester.rs  json_vials.rs  lib.rs  main.rs  proof.rs  sand.rs  vial.rs
src/ui/: appwindow.slint
tests/: engine_tests.rs  synthesis_tests.rs  test_engine.py  test_new_features.py
vials_synthesis/libraries/: c_std.json  cpp_std.json  csharp_dotnet.json  cuda.json  docker.json  electron.json  express.json  faiss.json  fastapi.json  go_std.json  kubernetes.json  node_js.json  pygame.json  pytorch.json  qt_cpp.json  random.json  react.json  rust_std.json  sql_sqlite.json  sqlite.json  tkinter.json  websockets.json  x86_64_assembly.json
vials_synthesis/patterns/: cli_app.json  container_app.json  cpp_gui_app.json  dependency_resolution.json  framework_app.json  fsm.json  grid_layout.json  gui_random_app.json  mvc.json  polyglot_cli_app.json  polyglot_db_app.json  polyglot_gui_app.json  polyglot_web_app.json
