[package]
name = "dsce"
version = "0.1.0"
edition = "2021"
description = "Deterministic Semantic Computation Engine — sand-and-vials spreading activation in Rust"
license = "MIT"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
ordered-float = "4"
slint = { version = "1.6", features = ["compat-1-2"] }

[build-dependencies]
slint-build = "1.6"

[[bin]]
name = "dsce"
path = "src/main.rs"

[[bin]]
name = "dsce-gui"
path = "src/gui_main.rs"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
