[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dsce"
version = "0.1.0"
description = "DSCE — Deterministic Semantic Computation Engine: a vial/sand proof engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Ethan Kilmer" }]
keywords = ["reasoning", "proof-engine", "knowledge-representation", "explainable-ai"]

[project.urls]
Homepage = "https://github.com/Ethan-da-Tech-Wizard/DSCE"

[tool.setuptools]
packages = ["dsce"]
